added another map provider